maybe this is a yaml problem and Travis has the worst diagnostics ever?

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_script:
   fi
 - 'echo "Installing Rust version: $RUST_TOOLCHAIN"'
 # install Rust
-- 'curl -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain "$RUST_TOOLCHAIN"' --profile minimal --component rust-src --component miri
+- 'curl -sSf https://sh.rustup.rs | sh -s -- -y --default-toolchain "$RUST_TOOLCHAIN" --profile minimal --component rust-src --component miri'
 - export PATH=$HOME/.cargo/bin:$PATH
 - rustc --version
 
