--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
       - 'master'
   schedule:
     # Use <https://crontab.guru> to conveniently edit cron schedule.
-    - cron: '0 7 * * *' # At 07:00 UTC every day.
+    - cron: '0 6 * * *' # At 06:00 UTC every day.
 
 jobs:
   build:
@@ -27,6 +27,7 @@ jobs:
           fi
           echo "Installing Rust version: $RUST_TOOLCHAIN"
           rustup default $RUST_TOOLCHAIN
+          rustup components add rust-src miri
 
       - name: Show Rust version
         run: |
