--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,3 +40,28 @@ jobs:
 
       - name: Test
         run: bash ./ci.sh
+
+  # Send a Zulip notification when a cron job fails
+  cron-fail-notify:
+    name: cronjob failure notification
+    runs-on: ubuntu-latest
+    needs: [build]
+    if: github.event_name == 'schedule' && (failure() || cancelled())
+    steps:
+      - name: Install zulip-send
+        run: pip3 install zulip
+      - name: Send Zulip notification
+        shell: bash
+        env:
+          ZULIP_BOT_EMAIL: ${{ secrets.ZULIP_BOT_EMAIL }}
+          ZULIP_API_TOKEN: ${{ secrets.ZULIP_API_TOKEN }}
+        run: |
+          ~/.local/bin/zulip-send --stream miri --subject "Cron Job Failure $(date -uI)" \
+            --message 'Dear @**RalfJ**,
+
+          The standard library test suite is failing under Miri. Would you mind investigating this issue?
+
+          Thanks in advance!
+          Sincerely,
+          The Miri Cronjobs Bot' \
+            --user $ZULIP_BOT_EMAIL --api-key $ZULIP_API_TOKEN --site https://rust-lang.zulipchat.com
