Empty `core_miri_test` and `alloc_miri_test` unless `cfg(any(test, doctest))`

--- a/alloc_miri_test/Cargo.toml
+++ b/alloc_miri_test/Cargo.toml
@@ -10,6 +10,12 @@ edition = "2018"
 name = "alloc_miri_test"
 path = "../liballoc/src/lib.rs"
 
+[features]
+# Empty this crate to avoid two copies of liballoc.
+# See https://github.com/rust-lang/miri-test-libstd/issues/4.
+default = ["miri-test-libstd"]
+miri-test-libstd = []
+
 [dependencies]
 
 [dev-dependencies]
