also run parts of the portable-simd test suite

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,7 @@ jobs:
           echo "Installing Rust version: $RUST_TOOLCHAIN"
           rustup default $RUST_TOOLCHAIN
           rustup component add rust-src miri
+          cargo miri setup
 
       - name: Show Rust version
         run: |
