--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,11 +59,27 @@ jobs:
       - name: Test
         run: bash ./ci-test.sh simd
 
+  test-more:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/.crates.toml
+            ~/.cargo/.crates2.json
+          key: ${{ runner.os }}-cargo-bin
+      - name: Setup environment
+        run: bash ./ci-setup.sh
+      - name: Test
+        run: bash ./ci-test.sh more
+
   # Send a Zulip notification when a cron job fails
   cron-fail-notify:
     name: cronjob failure notification
     runs-on: ubuntu-latest
-    needs: [test-core, test-alloc, test-simd]
+    needs: [test-core, test-alloc, test-simd, test-more]
     if: github.event_name == 'schedule' && (failure() || cancelled())
     steps:
       - name: Install zulip-send
