--- a/std_miri_test/Cargo.toml
+++ b/std_miri_test/Cargo.toml
@@ -14,14 +14,16 @@ name = "std_miri_test"
 path = "../library/std/src/lib.rs"
 
 [dependencies]
-# only those that we actually neeed; most can be implicitly fetched from the sysroot it seems.
-alloc = { package = "rustc-std-workspace-alloc", path = "../rustc-std-workspace-alloc" }
-cfg-if = { version = "0.1.8", features = ['rustc-dep-of-std'] }
-core = { package = "rustc-std-workspace-core", path = "../rustc-std-workspace-core" }
-libc = { version = "0.2.126", default-features = false, features = ['rustc-dep-of-std'] }
-hashbrown = { version = "0.12", default-features = false, features = ['rustc-dep-of-std'] }
-std_detect = { path = "../library/stdarch/crates/std_detect", default-features = false, features = ['rustc-dep-of-std'] }
-rustc-demangle = { version = "0.1.21", features = ['rustc-dep-of-std'] }
+# just a bunch of fake crates that reeexport sysroot crates, so that std's imports work out
+# (this works because we only build std as a test; the regular crate build is
+# completely empty thanks to the `miri-test-libstd` feature below)
+core = { path = "../fake/core" }
+alloc = { path = "../fake/alloc" }
+cfg-if = { path = "../fake/cfg-if" }
+libc = { path = "../fake/libc" }
+hashbrown = { path = "../fake/hashbrown" }
+std_detect = { path = "../fake/std_detect" }
+rustc-demangle = { path = "../fake/rustc-demangle" }
 
 [dev-dependencies]
 rand = "0.7"
