fix alloc imports

--- a/core_miri_test/Cargo.toml
+++ b/core_miri_test/Cargo.toml
@@ -24,3 +24,5 @@ path = "../library/core/tests/lib.rs"
 
 [dev-dependencies]
 rand = "0.7"
+# This lets tests access the `core` crate.
+core = { path = "../fake/core" }
