--- a/alloc_miri_test/Cargo.toml
+++ b/alloc_miri_test/Cargo.toml
@@ -18,6 +18,9 @@ miri-test-libstd = []
 [dev-dependencies]
 rand = "0.7"
 rand_xorshift = "0.2"
+# This lets tests access the `core` and `alloc` crates.
+core = { path = "../fake/core" }
+alloc = { path = "../fake/alloc" }
 
 [[test]]
 name = "collectionstests"
