--- a/core_miri_test/Cargo.toml
+++ b/core_miri_test/Cargo.toml
@@ -23,6 +23,7 @@ name = "coretests"
 path = "../library/core/tests/lib.rs"
 
 [dev-dependencies]
-rand = "0.7"
+rand = "0.8"
+rand_xorshift = "0.3"
 # This lets tests access the `core` crate.
 core = { path = "../fake/core" }
