--- a/std_miri_test/Cargo.toml
+++ b/std_miri_test/Cargo.toml
@@ -26,7 +26,8 @@ std_detect = { path = "../fake/std_detect" }
 rustc-demangle = { path = "../fake/rustc-demangle" }
 
 [dev-dependencies]
-rand = "0.7"
+rand = "0.8"
+rand_xorshift = "0.3"
 
 [features]
 # Empty this crate
