--- a/alloc_miri_test/Cargo.toml
+++ b/alloc_miri_test/Cargo.toml
@@ -15,12 +15,14 @@ path = "../library/alloc/src/lib.rs"
 default = ["miri-test-libstd"]
 miri-test-libstd = []
 
-[dev-dependencies]
-rand = "0.7"
-rand_xorshift = "0.2"
-# This lets tests access the `core` and `alloc` crates.
+[dependencies]
+# This lets the crate access the `core` and `alloc` crates.
 core = { path = "../fake/core" }
 alloc = { path = "../fake/alloc" }
+
+[dev-dependencies]
+rand = { version = "0.8.5", default-features = false, features = ["alloc"] }
+rand_xorshift = "0.3.0"
 
 [[test]]
 name = "collectionstests"
