--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,15 @@ jobs:
       - name: Test
         run: bash ./ci-test.sh simd
 
+  test-stdarch:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup environment
+        run: bash ./ci-setup.sh
+      - name: Test
+        run: bash ./ci-test.sh stdarch
+
   # Send a Zulip notification when a cron job fails
   cron-fail-notify:
     name: cronjob failure notification
