--- a/.github/workflows/ci-sanitizers.yaml
+++ b/.github/workflows/ci-sanitizers.yaml
@@ -15,56 +15,27 @@ env:
   TARGET: x86_64-unknown-linux-gnu
 
 jobs:
-  test-core:
+  enable_matrix:
+    strategy:
+      matrix:
+        crate: [core, alloc, std, simd, stdarch]
+    name: Test ${{ matrix.crate }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - name: Setup environment
         run: bash ./ci-sanitizers-setup.sh
-      - name: Test ASAN
-        run: bash ./ci-sanitizers-test.sh core address
-      - name: Test MSAN
-        run: bash ./ci-sanitizers-test.sh core memory
-      - name: Test TSAN
-        run: bash ./ci-sanitizers-test.sh core thread
-      - name: Test CFISAN
-        run: bash ./ci-sanitizers-test.sh core cfi
-
-  # test-alloc:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Setup environment
-  #       run: bash ./ci-sanitizers-setup.sh
-  #     - name: Test
-  #       run: bash ./ci-sanitizers-test.sh alloc
-
-  # test-std:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Setup environment
-  #       run: bash ./ci-sanitizers-setup.sh
-  #     - name: Test
-  #       run: bash ./ci-sanitizers-test.sh std
-
-  # test-simd:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Setup environment
-  #       run: bash ./ci-sanitizers-setup.sh
-  #     - name: Test
-  #       run: bash ./ci-sanitizers-test.sh simd
-
-  # test-stdarch:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - name: Setup environment
-  #       run: bash ./ci-sanitizers-setup.sh
-  #     - name: Test
-  #       run: bash ./ci-sanitizers-test.sh stdarch
+      - name: Test ASAN (Address Sanitizer)
+        run: bash ./ci-sanitizers-test.sh ${{ matrix.crate }} address
+      - name: Test MSAN (MemorySanitizer)
+        run: bash ./ci-sanitizers-test.sh ${{ matrix.crate }} memory
+      - name: Test TSAN (ThreadSanitizer)
+        run: bash ./ci-sanitizers-test.sh ${{ matrix.crate }} thread
+      - name: Test CFISAN (ControlFlowIntegrity)
+        run: bash ./ci-sanitizers-test.sh ${{ matrix.crate }} cfi
+      - name: Test SafeStack
+        run: bash ./ci-sanitizers-test.sh ${{ matrix.crate }} leak
+      - name: Test LSAN (LeakSanitizer)
 
   # Send a Zulip notification when a cron job fails
   # cron-fail-notify:
