--- a/alloc_run_test/Cargo.toml
+++ b/alloc_run_test/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "alloc_sanity_test"
+name = "alloc_run_test"
 version = "0.0.0"
 autotests = false
 autobenches = false
 edition = "2021"
 
 [lib]
-name = "alloc_sanity_test"
+name = "alloc_run_test"
 path = "../library/alloc/src/lib.rs"
 
 [features]
