--- a/core_run_test/Cargo.toml
+++ b/core_run_test/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 authors = ["The Rust Project Developers"]
-name = "core_sanity_test"
+name = "core_run_test"
 version = "0.0.0"
 autotests = false
 autobenches = false
 edition = "2021"
 
 [lib]
-name = "core_sanity_test"
+name = "core_run_test"
 path = "../library/core/src/lib.rs"
 test = false
 bench = false
