Disable cfi for now

--- a/.github/workflows/ci-sanitizers.yaml
+++ b/.github/workflows/ci-sanitizers.yaml
@@ -21,6 +21,10 @@ jobs:
       matrix:
         crate: [core, alloc, std, simd, stdarch]
         sanitizer: [address, memory, thread, cfi, safestack, leak]
+        exclude:
+          # FIXME can't get this to compile because of conflicts with lto
+          # and embed-bitcode
+           sanitizer: cfi 
     name: Test ${{ matrix.crate }} with ${{ matrix.sanitizer }} sanitizer
     runs-on: ubuntu-latest
     steps:
