--- a/.github/workflows/ci-sanitizers.yaml
+++ b/.github/workflows/ci-sanitizers.yaml
@@ -13,6 +13,7 @@ on:
 # only one target for now
 env:
   TARGET: x86_64-unknown-linux-gnu
+  RUST_BACKTRACE: full
 
 jobs:
   enable_matrix:
@@ -21,10 +22,8 @@ jobs:
       matrix:
         crate: [core, alloc, std, simd, stdarch]
         sanitizer: [address, memory, thread, cfi, safestack, leak]
-        exclude:
-          # FIXME can't get this to compile because of conflicts with lto
-          # and embed-bitcode
-           - sanitizer: cfi 
+        # exclude:
+           # - sanitizer: cfi 
     name: Test ${{ matrix.crate }} with ${{ matrix.sanitizer }} sanitizer
     runs-on: ubuntu-latest
     steps:
