--- a/.github/workflows/ci-sanitizers.yaml
+++ b/.github/workflows/ci-sanitizers.yaml
@@ -22,8 +22,11 @@ jobs:
       matrix:
         crate: [core, alloc, std, simd, stdarch]
         sanitizer: [address, memory, thread, cfi, safestack, leak]
-        # exclude:
-           # - sanitizer: cfi 
+        exclude:
+          # FIXME: cfi is a mix of lto, bitcode, 1-cgu, and it doesn't seem to
+          # even compile
+           - sanitizer: cfi 
+             crate: core
     name: Test ${{ matrix.crate }} with ${{ matrix.sanitizer }} sanitizer
     runs-on: ubuntu-latest
     steps:
