--- a/.github/workflows/ci-sanitizers.yaml
+++ b/.github/workflows/ci-sanitizers.yaml
@@ -40,11 +40,11 @@ jobs:
         run: bash ./ci-sanitizers-setup.sh
       - name: Run ${{ matrix.sanitizer }}
         # Mark everything as pass just so GH doesn't cancel on us as soon as there is a failure
-        run: ./ci-sanitizers-test.sh ${{ matrix.crate }} ${{ matrix.sanitizer }} && echo good! || echo fail!
+        run: ./ci-sanitizers-test.sh ${{ matrix.crate }} ${{ matrix.sanitizer }} && echo 'good!' || echo 'fail!''
   mark_failure:
     runs-on: ubuntu-latest
     steps:
-      - run: sleep 2000 && echo that's enough time!; exit 1
+      - run: sleep 2000 && echo that's enough 'time!'; exit 1
 
   # Send a Zulip notification when a cron job fails
   # cron-fail-notify:
