Fix stdarch test, clean CI script and unused warnings

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ exclude = [
   # stdarch has its own Cargo workspace
   "library/stdarch",
   "rust-src-patched/library/stdarch",
+  "rust-src-patched-san/library/stdarch",
 ]
