--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,10 @@
 name: CI
 
 on:
-  push:
-    branches:
-      - 'master'
   pull_request:
-    branches:
-      - 'master'
+  merge_group:
+  push:
+    branches: ['master']
   schedule:
     - cron: '00 2 * * *' # At 02:00 UTC every day (like rustup-components-history).
 
@@ -56,12 +54,22 @@ jobs:
       - name: Test
         run: bash ./ci-test.sh stdarch
 
+  # One job that "summarizes" the success state of this pipeline. This can then be added to branch
+  # protection, rather than having to add each job separately.
+  success:
+    name: Success
+    runs-on: ubuntu-latest
+    needs: [test-core, test-alloc, test-std, test-simd, test-stdarch]
+    steps:
+      - name: mark the job as a success
+        run: exit 0
+
   # Send a Zulip notification when a cron job fails
   cron-fail-notify:
     name: cronjob failure notification
     runs-on: ubuntu-latest
-    needs: [test-core, test-alloc, test-std, test-simd]
-    if: github.event_name == 'schedule' && (failure() || cancelled())
+    needs: [success]
+    if: github.event_name == 'schedule' && failure()
     steps:
       - name: Install zulip-send
         run: pip3 install zulip
