--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,9 +60,14 @@ jobs:
     name: Success
     runs-on: ubuntu-latest
     needs: [test-core, test-alloc, test-std, test-simd, test-stdarch]
+    # Github branch protection is exceedingly silly and treats "jobs skipped because a dependency
+    # failed" as success. So we have to do some contortions to ensure the job fails if any of its
+    # dependencies fails.
+    if: always() # make sure this is never "skipped"
     steps:
-      - name: mark the job as a success
-        run: exit 0
+      - name: fail if any dependency failed
+        run: exit 1
+        if: failure()
 
   # Send a Zulip notification when a cron job fails
   cron-fail-notify:
