--- a/core_miri_test/Cargo.toml
+++ b/core_miri_test/Cargo.toml
@@ -8,23 +8,13 @@ edition = "2021"
 
 [lib]
 name = "core_miri_test"
-path = "../library/core/src/lib.rs"
+path = "../empty.rs"
 test = false
 bench = false
-
-[features]
-# Empty this crate to avoid two copies of libcore.
-# See https://github.com/rust-lang/miri-test-libstd/issues/4.
-default = ["miri-test-libstd"]
-miri-test-libstd = []
 
 [[test]]
 name = "coretests"
 path = "../library/core/tests/lib.rs"
-
-[dependencies]
-# This lets the crate access the `core` crate.
-core = { path = "../fake/core" }
 
 [dev-dependencies]
 rand = { version = "0.8.5", default-features = false }
